--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.1.7
 django-appconf==1.0.4
 django-compressor==2.4
 django-crispy-forms==1.11.1
+django-environ==0.4.5
 django-sass-processor==0.8.2
 libsass==0.20.1
 psycopg2-binary==2.8.6
